--- a/invite/index.html
+++ b/invite/index.html
@@ -8,157 +8,56 @@
     <meta name="Resource-type" content="Document"/>
     <meta name="description" content="超神电竞排位上分英雄训练营荣耀代练王者荣耀攻略高手视频荣耀赛事线下约玩">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1,user-scalable=no">
+
     <!--<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">-->
     <!--<link rel="icon" type="image/vnd.microsoft.icon" href="src/favicon.ico">-->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
     <link rel="stylesheet" media="screen and (max-width:1000px)" href="css/main_mobile.css" type="text/css"/>
     <script src="js/flexible.js"></script>
     <link rel="stylesheet" media="screen and (min-width:1280px)" href="css/main_pc.css" type="text/css"/>
-
 </head>
 <body>
-<div class="main">
-    <!--<img smain_bg.jpg.jpg.jpg" alt="">-->
-    <div class="content">
-        <div class="first">
-            <div class="first-item">
-                <div class="new-user-text">
-                    <div class="title-num">
-                        <span>01</span>
-                    </div>
-                    <div class="title-content">
-                        <p class="red-title">新用户福利</p>
-                        <p class="float-title">新用户玩家可以获得<span>1次抽奖机会、1次夺宝机会、1次娃娃机机会、1张躺赢车票。</span></p>
-                    </div>
+<div id="fullpage">
+    <div class="section" id="section1">
+        <div class="banner">
+        </div>
+        <div class="fuli-one">
+            <div class="fuli-one-top">
+                <div class="input-mobile-container">
+                    <img src="img/icon_phone.png" alt="">
+                    <input type="text" name="phonenum" id="phonenum" maxlength="11" placeholder="输入手机号">
+
                 </div>
-                <div class="new-user-content">
-                    <div class="first-content-one">
-                        <div class="row-one">
-                            <div class="item left margin-left">
-                                <img src="img/lottery.jpg" alt="">
-                                <p>抽奖机会*1</p>
-                            </div>
-                            <div class="item right">
-                                <img src="img/treasure.jpg" alt="">
-                                <p>夺宝机会*1</p>
-                            </div>
-                        </div>
-                        <div class="row-one">
-                            <div class="item left ">
-                                <img src="img/wawaji.jpg" alt="">
-                                <p>娃娃机机会*1</p>
-                            </div>
-                            <div class="item right">
-                                <img src="img/ticket.jpg" alt="">
-                                <p>躺赢车票*1</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="first-content-two">
-                        <p>抽奖可获得</p>
-                        <div class="row-one">
-                            <div class="item ">
-                                <img src="img/red_mingwen.jpg" alt="">
-                                <p>铭文</p>
-                            </div>
-                        </div>
-                        <div class="row-one">
-                            <div class="item left">
-                                <img src="img/libai.jpg" alt="">
-                                <p>英雄</p>
-                            </div>
-                            <div class="item right">
-                                <img src="img/luna.jpg" alt="">
-                                <p>皮肤</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
             </div>
-            <div class="first-item right">
-                <div class="new-user-text-no-title new-user-text">
-                    <div class="title-content title-content-two ">
-                        <p class="float-title">新用户下载app，每天登录app狂送<span>英雄、皮肤、5级铭文。</span></p>
-                    </div>
-                </div>
-                <div class="new-user-content">
-                    <div class="first-content-two first-content-three">
-                        <p>登录可获得</p>
-                        <div class="row-one">
-                            <div class="item ">
-                                <img src="img/blue_mingwen.jpg" alt="">
-                                <p>铭文</p>
-                            </div>
-                        </div>
-                        <div class="row-one">
-                            <div class="item left">
-                                <img src="img/diaochan.jpg" alt="">
-                                <p>英雄</p>
-                            </div>
-                            <div class="item right">
-                                <img src="img/luban.jpg" alt="">
-                                <p>皮肤</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="first-content-four">
-                        <img src="img/wangzhaojun.png" alt="">
-                        <div class="pick-right-now" id="pickRightNow">
-                            立即领取
-                        </div>
-                        <div class="phone-num">
-                            <span>手机号:</span>
-                            <input type="text" name="phonenum" id="phonenum" maxlength="11">
-                        </div>
-                        <div class="validate-code">
-                            <span>验证码:</span>
-                            <input type="text" name="varifyCode" id="varifyCode" maxlength="4">
-                            <a id="getCode">
-                                获取验证码
-                            </a>
-                        </div>
-                    </div>
-                </div>
+            <div class="get-gift"></div>
+            <div class="arrow">
+                <img src="img/arrow.png" alt="">
             </div>
         </div>
-
-        <div class="second">
-            <div class="new-user-text">
-                <div class="title-num">
-                    <span>02</span>
-                </div>
-                <div class="title-content">
-                    <p class="red-title">王者福利</p>
-                    <p class="float-title">代打、陪打接单赚钱，参加擂台赢取 <span>5000%</span> 奖励</p>
-                </div>
-            </div>
-            <div class="second-content">
-                <div class="second-content-item">
-                    <p>王者擂台</p>
-                    <img src="img/second_item_01.jpg" alt="">
-                    <span class="item-bottom">全网首家公平竞技平台<br/>25万现金+宝马奖励超出想象</span>
-                </div>
-                <div class="second-content-item">
-                    <p>代打陪玩</p>
-                    <img src="img/second_item_02.jpg" alt="">
-                    <span class="item-bottom">只收押金，不收其他费用<br/>订单利润全归打手</span>
-                </div>
-                <div class="second-content-item second-content-item-3 ">
-                    <p>教练陪练</p>
-                    <img src="img/second_item_03.jpg" alt="">
-                    <span class="item-bottom">高额项目分红<br/>合作方式人性化，自由、无拘束</span>
-                </div>
+        <div class="layer hide">
+            <div class="dialog">
+                <p class="dialog-title">领取成功</p>
+                <p class="dialog-content">恭喜你领取成功,详情请登录App查看</p>
+                <a class="dialog-download">立即下载</a>
             </div>
         </div>
     </div>
-    <div class="layer hide">
-        <div class="dialog">
-            <p class="dialog-title">领取成功</p>
-            <p class="dialog-content">恭喜你领取成功,详情请登录App查看</p>
-            <a class="dialog-download">立即下载</a>
+    <div class="section" id="section2">
+        <div class="fuli-two">
+            <div class="download"></div>
         </div>
+        <div class="fuli-three">
+
+        </div>
+        <p class="explain">
+            本活动方案最终解释权归我是王者平台所有
+        </p>
     </div>
 </div>
+
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
