--- a/invite/index.html
+++ b/invite/index.html
@@ -55,7 +55,7 @@
         </p>
     </div>
 </div>
-
+<p>Hosted by <a href="https://pages.coding.me" style="font-weight: bold">Coding Pages</a></p>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 <script src="js/main.js"></script>
