--- a/gather/index.html
+++ b/gather/index.html
@@ -92,7 +92,10 @@
                <div class="rank">
                   <div class="rank-item">
                       <div class="left">
-                          <img src="img/avatar.png" alt="" class="redborder">
+                          <div class="avatar-container-red">
+                              <img src="img/avatar.png" alt="">
+                              <span class="small-tag">1</span>
+                          </div>
                           <span class="rank-name">水中贵族</span>
                       </div>
                       <div class="right">
@@ -101,21 +104,43 @@
                           <img src="img/renqi.png" alt="">
                       </div>
                   </div>
-                   <div class="rank-item">
-                       <div class="left">
-                           <img src="img/avatar.png" alt=""  class="orangeborder">
-                           <span class="rank-name">水中贵族</span>
-                       </div>
-                       <div class="right">
-                           赞助人气值:
-                           <span class="togeter-value">500</span>
-                           <img src="img/renqi.png" alt="">
-                       </div>
-                   </div>
-                   <div class="rank-item">
-                       <div class="left">
-                           <img src="img/avatar.png" alt=""  class="yellowborder">
 
+                   <div class="rank-item">
+                       <div class="left">
+                           <div class="avatar-container-orange">
+                               <img src="img/avatar.png" alt="">
+                               <span class="small-tag">2</span>
+                           </div>
+                           <span class="rank-name">水中贵族</span>
+                       </div>
+                       <div class="right">
+                           赞助人气值:
+                           <span class="togeter-value">500</span>
+                           <img src="img/renqi.png" alt="">
+                       </div>
+                   </div>
+
+                   <div class="rank-item">
+                       <div class="left">
+                           <div class="avatar-container-yellow">
+                               <img src="img/avatar.png" alt="">
+                               <span class="small-tag">3</span>
+                           </div>
+                           <span class="rank-name">水中贵族</span>
+                       </div>
+                       <div class="right">
+                           赞助人气值:
+                           <span class="togeter-value">500</span>
+                           <img src="img/renqi.png" alt="">
+                       </div>
+                   </div>
+
+                   <div class="rank-item">
+                       <div class="left">
+                           <div class="avatar-container-gray">
+                               <img src="img/avatar.png" alt="">
+                               <span class="small-tag">4</span>
+                           </div>
                            <span class="rank-name">水中贵族</span>
                        </div>
                        <div class="right">
@@ -126,29 +151,10 @@
                    </div>
                    <div class="rank-item">
                        <div class="left">
-                           <img src="img/avatar.png" alt="">
-                           <span class="rank-name">水中贵族</span>
-                       </div>
-                       <div class="right">
-                           赞助人气值:
-                           <span class="togeter-value">500</span>
-                           <img src="img/renqi.png" alt="">
-                       </div>
-                   </div>
-                   <div class="rank-item">
-                       <div class="left">
-                           <img src="img/avatar.png" alt="">
-                           <span class="rank-name">水中贵族</span>
-                       </div>
-                       <div class="right">
-                           赞助人气值:
-                           <span class="togeter-value">500</span>
-                           <img src="img/renqi.png" alt="">
-                       </div>
-                   </div>
-                   <div class="rank-item">
-                       <div class="left">
-                           <img src="img/avatar.png" alt="">
+                           <div class="avatar-container-gray">
+                               <img src="img/avatar.png" alt="">
+                               <span class="small-tag">5</span>
+                           </div>
                            <span class="rank-name">水中贵族</span>
                        </div>
                        <div class="right">
