--- a/gather/index.html
+++ b/gather/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>人气</title>
+    <title>集人气</title>
 
     <meta name="Resource-type" content="Document"/>
     <meta name="description" content="超神电竞排位上分英雄训练营荣耀代练王者荣耀攻略高手视频荣耀赛事线下约玩">
@@ -18,6 +18,7 @@
 </head>
 <body>
 <div class="main">
+    <div class="yindao"></div>
     <div class="banner">
         <img src="img/text_3v3.png" alt="">
         <p class="text">QQ区 | 中级场 | 2017-06-17 19:00开赛</p>
