--- a/kline/index.html
+++ b/kline/index.html
@@ -52,7 +52,7 @@
 
 </div>
 
-<script src="/kine/dist/kline.js"></script>
+<script type="text/javascript" src="/kine/dist/kline.js"></script>
 
 <script type="text/javascript">
 
