--- a/kline/index.html
+++ b/kline/index.html
@@ -4,8 +4,8 @@
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="/kine/lib/jquery.js"></script>
-    <script src="/kine/lib/jquery.mousewheel.js"></script>
+    <script src="lib/jquery.js"></script>
+    <script src="lib/jquery.mousewheel.js"></script>
     <style type="text/css">
         .kline {
             width: 1200px;
@@ -52,7 +52,7 @@
 
 </div>
 
-<script type="text/javascript" src="/kine/dist/kline.js"></script>
+<script type="text/javascript" src="dist/kline.js"></script>
 
 <script type="text/javascript">
 
