--- a/kline/index.html
+++ b/kline/index.html
@@ -67,7 +67,7 @@
         symbol: "BTC",
         symbolName: "BTC/USD",
         type: "poll", // poll/socket
-        url: "mock.json",
+        url: "/kline/mock.json",
         limit: 1000,
         intervalTime: 5000,
         debug: true,
